<resources>
    <string name="app_name">MegaBet</string>


    <string-array name="entries_beendeteSpieleDATUM">
        <item>11.11.</item>
        <item>11.11.</item>
        <item>11.11.</item>
    </string-array>

    <string-array name="entries_beendeteSpieleUHRZEIT">
        <item>15:30</item>
        <item>15:30</item>
        <item>15:30</item>
    </string-array>

    <string-array name="entries_beendeteSpieleHEIM">
        <item>Bielefeld</item>
        <item>Schalke</item>
        <item>Berlin</item>
    </string-array>

    <string-array name="entries_beendeteSpieleGAST">
        <item>Paderborn</item>
        <item>Dortmund</item>
        <item>München</item>
    </string-array>

    <string-array name="entries_offeneSpieleHEIM">
        <item>Hamburg</item>
        <item>Hannover</item>
        <item>Leverkusen</item>
    </string-array>

    <string-array name="entries_offeneSpieleGAST">
        <item>Bremen</item>
        <item>Braunschweig</item>
        <item>Köln</item>
    </string-array>

    <string name="action_logout">Logout</string>

    <string name="spiel_bearbeiten">Spiel bearbeiten</string>
    <string name="heim">Heim:\u0020\u0020\u0020</string>
    <string name="gast">Gast:\u0020\u0020\u0020</string>
    <string name="datum">Datum:</string>
    <string name="uhrzeit">Uhrzeit:</string>
    <string name="ergebnis">Ergebnis</string>
    <string name="rb_heim">Sieg Heim</string>
    <string name="rb_gast">Sieg Gast</string>
    <string name="rb_unentschieden">Unentschieden</string>
    <string name="spielstand">Spielstand:</string>
    <string name="spielstand_doppelpunkt">:</string>
    <string name="button_cancel">abbrechen</string>
    <string name="button_delete">löschen</string>
    <string name="button_ok">OK</string>



</resources>
