<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_spiel_bearbeiten"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.fh_bielefeld.megabet.SpielActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="afoerster@fh-bielefeld.de"
            android:layout_width="252dp"
            android:layout_height="33dp"
            android:id="@+id/TextViewUsername" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSpiel"
            android:text="@string/spiel_bearbeiten"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heim"
                android:id="@+id/textViewHeim"
                android:textIsSelectable="false"
                android:textAllCaps="false"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text"
                android:id="@+id/editTextHeim"
                android:textAlignment="center"
                 />

            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:text="@string/gast"
            android:id="@+id/TextViewGast"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="text"
            android:id="@+id/editTextGast"
            android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datum"
                android:id="@+id/TextViewDatum"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/editTextDate"
                android:textAlignment="center"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uhrzeit"
                android:id="@+id/textViewUhrzeit"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/editTextTime"
                android:textAlignment="center"
                android:focusable="false" />

            <!-- android:focusable="false" => damit die Tastaur nich erscheint -->


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:text="@string/ergebnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewErgebnis"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spielstand"
                android:id="@+id/textViewSpielstand"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextToreHeim"
                android:textAlignment="center"
                android:inputType="number" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text="@string/spielstand_doppelpunkt"
                android:id="@+id/textViewDoppelpunkt"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextToreGast"
                android:textAlignment="center"
                android:inputType="number" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/rb_heim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"

            android:gravity="center_vertical" />

        <RadioButton
            android:text="@string/rb_gast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="@string/rb_unentschieden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />
    </RadioGroup>


        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="95dp">

            <Button
                android:text="@string/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonAbbrechen"
                android:layout_weight="1"
                android:onClick="onClickCancel" />

            <Button
                android:text="@string/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonOK"
                android:layout_weight="1"
                android:onClick="onClickOK" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
